--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
 
 <body class="bg">
 
-
-
     <header id="header">
 
         <nav id="nav" class="nav-bar container-fluid">
@@ -30,8 +28,7 @@
                         <span id="hamburger"></span>
                        
                       </button>
-
-
+                    <!-- sfsfsafsafsa -->
                 </div>
 
 
