--- a/welcome.html
+++ b/welcome.html
@@ -35,13 +35,22 @@
         <div class="container-fluid">
             <div>
                 <div class=" row principal ">
-                    <div class="div-entre col-lg-5 ">
+                    <div class="div-entre col-lg-6 ">
                         <h1 class="title1">Biblioteca<br>Gerenciável</h1>
                         <button class="custom-btn btn-2">Entre aqui</button>
                     </div>
-                    <div class="div-img-wel1 col-lg-7 "><img src="/img/welcome-1.png " alt=" "></div>
-
+                    <div class="div-img-wel1 col-lg-6 "><img src="/img/welcome-1.png " alt=" "></div>
                 </div>
+
+                <div class="container-fluid">
+                    <h1 class="title2">Principais <br> Funcionalidades</h1>
+                    <div class="row secundaria">
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
+                    </div>
+                </div>
+
             </div>
         </div>
 
