--- a/welcome.html
+++ b/welcome.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-vindo</title>
+    <link rel="stylesheet" href="welcome_style.css">
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -23,7 +24,7 @@
         <nav id="nav" class="nav-bar nav-bar-wel container-fluid">
             <div class="row nav-superior">
                 <div class="d-flex navbar-logo col-lg-2 col-md-6 col-sm-12 coll ">
-                    <a href="index.html"><img class="img-logo" src="img/logo_completa.png" alt=""></a>
+                    <a><img class="img-logo" src="img/logo_completa.png" alt=""></a>
                 </div>
             </div>
         </nav>
@@ -31,13 +32,13 @@
     </header>
 
 
-    <section class="section-wel">
+    <section class="hero-section section-wel">
         <div class="container-fluid">
             <div>
                 <div class=" row principal ">
                     <div class="div-entre col-lg-6 ">
                         <h1 class="title1">Biblioteca<br>Gerenciável</h1>
-                        <button class="custom-btn btn-2">Entre aqui</button>
+                        <button href="index.html" class="custom-btn btn-2">Entre aqui</button>
                     </div>
                     <div class="div-img-wel1 col-lg-6 "><img src="/img/welcome-1.png " alt=" "></div>
                 </div>
@@ -45,14 +46,37 @@
                 <div class="container-fluid">
                     <h1 class="title2">Principais <br> Funcionalidades</h1>
                     <div class="row secundaria">
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
+                        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
+
+                        <div class="container card-grid">
+
+                            <a class="card" href="#">
+                                <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557187666-4fd70cf76254?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+                                <div class="card__content">
+                                    <p class="card__category">Category</p>
+                                    <h3 class="card__heading">Example Card Heading</h3>
+                                </div>
+                            </a>
+                            <a class="card" href="#">
+                                <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+                                <div class="card__content">
+                                    <p class="card__category">Category</p>
+                                    <h3 class="card__heading">Example Card Heading</h3>
+                                </div>
+                                </li>
+                                <a class="card" href="#">
+                                    <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
+                                    <div class="card__content">
+                                        <p class="card__category">Category</p>
+                                        <h3 class="card__heading">Example Card Heading</h3>
+                                    </div>
+                                </a>
+
+                        </div>
+
                     </div>
                 </div>
-
-            </div>
-        </div>
 
     </section>
 
