--- a/welcome.html
+++ b/welcome.html
@@ -32,7 +32,7 @@
     </header>
 
 
-    <section class="hero-section section-wel">
+    <section class="section-wel">
         <div class="container-fluid">
             <div>
                 <div class=" row principal ">
@@ -46,37 +46,14 @@
                 <div class="container-fluid">
                     <h1 class="title2">Principais <br> Funcionalidades</h1>
                     <div class="row secundaria">
-                        <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-
-
-                        <div class="container card-grid">
-
-                            <a class="card" href="#">
-                                <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557187666-4fd70cf76254?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-                                <div class="card__content">
-                                    <p class="card__category">Category</p>
-                                    <h3 class="card__heading">Example Card Heading</h3>
-                                </div>
-                            </a>
-                            <a class="card" href="#">
-                                <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1556680262-9990363a3e6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-                                <div class="card__content">
-                                    <p class="card__category">Category</p>
-                                    <h3 class="card__heading">Example Card Heading</h3>
-                                </div>
-                                </li>
-                                <a class="card" href="#">
-                                    <div class="card__background" style="background-image: url(https://images.unsplash.com/photo-1557004396-66e4174d7bf6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60)"></div>
-                                    <div class="card__content">
-                                        <p class="card__category">Category</p>
-                                        <h3 class="card__heading">Example Card Heading</h3>
-                                    </div>
-                                </a>
-
-                        </div>
-
+                        <div class="col"></div>
+                        <div class="col"></div>
+                        <div class="col"></div>
                     </div>
                 </div>
+
+            </div>
+        </div>
 
     </section>
 
