--- a/HomePage/homepage.html
+++ b/HomePage/homepage.html
@@ -187,10 +187,137 @@
                                 <button class="custom-btn btn-2">Mostrar mais</button>
                             </div>
                         </div>
-                    </div>
 
+             <!--         <div class="mural row">
+                            <h1>Mural da Leitura</h1>
+                            <div class="cards-mural">
+
+                                <div class="card-mural">
+                                    <div class="card__image-holder">
+                                        <img class="card__image" src="https://source.unsplash.com/300x225/?wave"
+                                            alt="wave" />
+                                    </div>
+                                    <div class="card-mural-title">
+                                        <a href="#" class="toggle-info btn_mural">
+                                            <span class="left"></span>
+                                            <span class="right"></span>
+                                        </a>
+                                        <h2>
+                                            Card title
+                                            <small>Image from unsplash.com</small>
+                                        </h2>
+                                    </div>
+                                    <div class="card-mural-flap flap1">
+                                        <div class="card-mural-description">
+                                            This grid is an attempt to make something nice that works on touch devices.
+                                            Ignoring hover states when they're not available etc.
+                                        </div>
+                                        <div class="card-mural-flap flap2">
+                                            <div class="card-mural-actions">
+                                                <a href="#" class="btn_mural">Read more</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-mural">
+                                    <div class="card__image-holder">
+                                        <img class="card__image" src="https://source.unsplash.com/300x225/?wave"
+                                            alt="wave" />
+                                    </div>
+                                    <div class="card-mural-title">
+                                        <a href="#" class="toggle-info btn_mural">
+                                            <span class="left"></span>
+                                            <span class="right"></span>
+                                        </a>
+                                        <h2>
+                                            Card title
+                                            <small>Image from unsplash.com</small>
+                                        </h2>
+                                    </div>
+                                    <div class="card-mural-flap flap1">
+                                        <div class="card-mural-description">
+                                            This grid is an attempt to make something nice that works on touch devices.
+                                            Ignoring hover states when they're not available etc.
+                                        </div>
+                                        <div class="card-mural-flap flap2">
+                                            <div class="card-mural-actions">
+                                                <a href="#" class="btn_mural">Read more</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-mural">
+                                    <div class="card__image-holder">
+                                        <img class="card__image" src="https://source.unsplash.com/300x225/?wave"
+                                            alt="wave" />
+                                    </div>
+                                    <div class="card-mural-title">
+                                        <a href="#" class="toggle-info btn_mural">
+                                            <span class="left"></span>
+                                            <span class="right"></span>
+                                        </a>
+                                        <h2>
+                                            Card title
+                                            <small>Image from unsplash.com</small>
+                                        </h2>
+                                    </div>
+                                    <div class="card-mural-flap flap1">
+                                        <div class="card-mural-description">
+                                            This grid is an attempt to make something nice that works on touch devices.
+                                            Ignoring hover states when they're not available etc.
+                                        </div>
+                                        <div class="card-mural-flap flap2">
+                                            <div class="card-mural-actions">
+                                                <a href="#" class="btn_mural">Read more</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="card-mural">
+                                    <div class="card__image-holder">
+                                        <img class="card__image" src="https://source.unsplash.com/300x225/?wave"
+                                            alt="wave" />
+                                    </div>
+                                    <div class="card-mural-title">
+                                        <a href="#" class="toggle-info btn_mural">
+                                            <span class="left"></span>
+                                            <span class="right"></span>
+                                        </a>
+                                        <h2>
+                                            Card title
+                                            <small>Image from unsplash.com</small>
+                                        </h2>
+                                    </div>
+                                    <div class="card-mural-flap flap1">
+                                        <div class="card-mural-description">
+                                            This grid is an attempt to make something nice that works on touch devices.
+                                            Ignoring hover states when they're not available etc.
+                                        </div>
+                                        <div class="card-mural-flap flap2">
+                                            <div class="card-mural-actions">
+                                                <a href="#" class="btn_mural">Read more</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
+
+                        </div>-->  
+
+
+
+
+
+
+                    </div>
                 </div>
+
             </div>
+        </div>
 
 
 
