--- a/welcome.html
+++ b/welcome.html
@@ -40,15 +40,48 @@
                         <h1 class="title1">Biblioteca<br>Gerenciável</h1>
                         <button href="index.html" class="custom-btn btn-2">Entre aqui</button>
                     </div>
-                    <div class="div-img-wel1 col-lg-6 "><img src="/img/welcome-1.png " alt=" "></div>
+                    <div class="div-img-wel1 col-lg-6 "><img src="/img/img-welcome/welcome-1.png " alt=" "></div>
                 </div>
 
                 <div class="container-fluid">
                     <h1 class="title2">Principais <br> Funcionalidades</h1>
-                    <div class="row secundaria">
-                        <div class="col"></div>
-                        <div class="col"></div>
-                        <div class="col"></div>
+
+                    <div class="container-fluid secundaria">
+                        <div class="row ">
+                            <div class="card-item col-4">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="/img/img-welcome/card-2.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Gerenciamento</h5>
+                                        <p class="card-text">Melhor organização no seu acervo bibliotecário.</p>
+                                        <a href="#" class="btn btn-primary">Saiba mais</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-item col-4">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="/img/img-welcome/card-3.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Empréstimos</h5>
+                                        <p class="card-text">Controle na realização de empréstimos literários.</p>
+                                        <a href="#" class="btn btn-primary">Saiba mais</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-item col-4">
+                                <div class="card" style="width: 18rem;">
+                                    <img src="/img/img-welcome/card-1.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+
+                                        <h5 class="card-title">Comunidade de Leitores</h5>
+                                        <p class="card-text">Um espaço para discussão temática</p>
+                                        <a href="#" class="btn btn-primary">Saiba mais</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
