--- a/welcome.html
+++ b/welcome.html
@@ -40,7 +40,7 @@
                         <h1 class="title1">Biblioteca<br>Gerenciável</h1>
                         <button href="index.html" class="custom-btn btn-2">Entre aqui</button>
                     </div>
-                    <div class="div-img-wel1 col-lg-6 "><img src="/img/img-welcome/welcome-1.png " alt=" "></div>
+                    <div class="div-img-wel1 col-lg-6 "><img src="/img/welcome-1.png " alt=" "></div>
                 </div>
 
                 <div class="container-fluid">
@@ -50,7 +50,7 @@
                         <div class="row ">
                             <div class="card-item col-4">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="/img/img-welcome/card-2.png" class="card-img-top" alt="...">
+                                    <img src="/img/card-2.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
                                         <h5 class="card-title">Gerenciamento</h5>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="card-item col-4">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="/img/img-welcome/card-3.png" class="card-img-top" alt="...">
+                                    <img src="/img/card-3.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
                                         <h5 class="card-title">Empréstimos</h5>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="card-item col-4">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="/img/img-welcome/card-1.png" class="card-img-top" alt="...">
+                                    <img src="/img/card-1.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
                                         <h5 class="card-title">Comunidade de Leitores</h5>
