--- a/HomePage/homepage.html
+++ b/HomePage/homepage.html
@@ -6,15 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/HomePage/hp.css">
+    <link rel="stylesheet" href="/Biblio/style.css">
+    <link rel="stylesheet" href="/Biblio/HomePage/hp.css">
     <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <title>Biblio+</title>
     <!-- Bootstrap icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
@@ -30,9 +27,8 @@
         <nav id="nav" class="nav-bar container-fluid">
             <div class="row nav-superior">
                 <div class="d-flex navbar-logo col-lg-2 col-md-6 col-sm-12 coll ">
-                    <a href="index.html"><img class="img-logo" src="/img/logo_completa.png" alt=""></a>
-                    <button class="col-sm-3" aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true"
-                        aria-controls="menu" aria-expanded="false">
+                    <a href="index.html"><img class="img-logo" src="/Biblio/img/logo_completa.png" alt=""></a>
+                    <button class="col-sm-3" aria-label="Abrir Menu" id="btn-mobile" aria-haspopup="true" aria-controls="menu" aria-expanded="false">
                         <a href="index.html"><img class="user-img user-mobile" src="/img/user.png" alt=""></a>
                         <span id="hamburger"></span>
 
@@ -41,10 +37,9 @@
                 </div>
 
 
-                <div class="col-lg-4 col-md-5 col-sm-12 coll pt-4">
+                <div class="col-lg-4 col-md-5 col-sm-12 pt-4">
                     <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Pesquisar livros"
-                            aria-label="Search">
+                        <input class="form-control me-2" type="search" placeholder="Pesquisar livros" aria-label="Search">
                         <button class="btn btn-outline-light" type="submit"><i class="bi bi-search"></i></button>
                         <a href="index.html"><img class="user-img user-desktop" src="/img/user.png" alt=""></a>
                     </form>
@@ -75,12 +70,9 @@
                         <div class="carrosel_anuncio col-lg-12 col-md-12 col-sm-12">
                             <figure class="icon-cards mt-2">
                                 <div class="icon-cards__content">
-                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span
-                                            class="h1"></span></div>
-                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span
-                                            class="h1"></span></div>
-                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span
-                                            class="h1"></span></div>
+                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"></span></div>
+                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"></span></div>
+                                    <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1"></span></div>
                                 </div>
                             </figure>
                         </div>
@@ -88,15 +80,15 @@
 
                         <div class="prateleira_ouro row">
                             <div class="titulo_prateleira">
-                                <img src="/img/barra_ouro.png" alt="icone ouro">
+                                <img src="/Biblio/img/barra_ouro.png" alt="icone ouro">
                                 <h1>Prateleira De Ouro</h1>
                             </div>
 
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">Harry Potter</h2>
-                                    <p class="copy">Harry Potter é um garoto órfão que vive infeliz com seus tios, os
-                                        Dursleys.</p>
+                                    <p class="copy">Harry Potter é um garoto órfão que vive infeliz com seus tios, os Dursleys.
+                                    </p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
@@ -104,16 +96,14 @@
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">O Peregrino</h2>
-                                    <p class="copy">Adaptação do conto de John Bunyan, que nos ensina sobre perigos e a
-                                        esperança da vida cristã.</p>
+                                    <p class="copy">Adaptação do conto de John Bunyan, que nos ensina sobre perigos e a esperança da vida cristã.</p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">Dom Casmurro</h2>
-                                    <p class="copy">Bentinho (Bento Santiago) e Capitu (Maria Capitolina) são vizinhos
-                                        desde crianças.</p>
+                                    <p class="copy">Bentinho (Bento Santiago) e Capitu (Maria Capitolina) são vizinhos desde crianças.</p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
@@ -139,15 +129,15 @@
 
                         <div class="prateleira_recomendados row">
                             <div class="titulo_prateleira">
-                                <img src="/img/recomendados.png" alt="icone ouro">
+                                <img src="/Biblio/img/recomendados.png" alt="icone ouro">
                                 <h1>Recomendados</h1>
                             </div>
 
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">Harry Potter</h2>
-                                    <p class="copy">Harry Potter é um garoto órfão que vive infeliz com seus tios, os
-                                        Dursleys.</p>
+                                    <p class="copy">Harry Potter é um garoto órfão que vive infeliz com seus tios, os Dursleys.
+                                    </p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
@@ -155,16 +145,14 @@
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">O Peregrino</h2>
-                                    <p class="copy">Adaptação do conto de John Bunyan, que nos ensina sobre perigos e a
-                                        esperança da vida cristã.</p>
+                                    <p class="copy">Adaptação do conto de John Bunyan, que nos ensina sobre perigos e a esperança da vida cristã.</p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
                             <div class="card col 3">
                                 <div class="content">
                                     <h2 class="title">Dom Casmurro</h2>
-                                    <p class="copy">Bentinho (Bento Santiago) e Capitu (Maria Capitolina) são vizinhos
-                                        desde crianças.</p>
+                                    <p class="copy">Bentinho (Bento Santiago) e Capitu (Maria Capitolina) são vizinhos desde crianças.</p>
                                     <button class="btn">Espréstimo</button>
                                 </div>
                             </div>
@@ -188,7 +176,7 @@
                             </div>
                         </div>
 
-             <!--         <div class="mural row">
+                        <!--         <div class="mural row">
                             <h1>Mural da Leitura</h1>
                             <div class="cards-mural">
 
@@ -306,7 +294,7 @@
 
                             </div>
 
-                        </div>-->  
+                        </div>-->
 
 
 
@@ -343,7 +331,7 @@
             <div class="col 2">
 
                 <p>
-                    <a href="index.html"><img class="img-logo-simplificada" src="img/logo_simplificada.png" alt=""></a>
+                    <a href="index.html"><img class="img-logo-simplificada" src="/Biblio/img/logo_simplificada.png" alt=""></a>
                     Biblio+ 2022 © Todos os direitos reservados
                 </p>
             </div>
@@ -353,8 +341,8 @@
         </article>
     </footer>
 
-    <script type="text/javascript" src="js/javascript.js"></script>
-    <script type="text/javascript" src="hp.js"></script>
+    <script type="text/javascript" src="/Biblio/js/javascript.js"></script>
+    <script type="text/javascript" src="/Biblio/HomePage/hp.js"></script>
 
 </body>
 
