--- a/welcome/welcome.html
+++ b/welcome/welcome.html
@@ -48,9 +48,9 @@
 
                     <div class="container-fluid secundaria">
                         <div class="row ">
-                            <div class="card-item col-4">
+                            <div class="card-item col-lg-4 col-md-6 col-sm-12">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="./img/card-2.png" class="card-img-top" alt="...">
+                                    <img src="/img/img-welcome/card-2.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
                                         <h5 class="card-title">Gerenciamento</h5>
@@ -59,9 +59,9 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-item col-4">
+                            <div class="card-item col-lg-4 col-md-6 col-sm-12">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="./img/card-3.png" class="card-img-top" alt="...">
+                                    <img src="/img/img-welcome/card-3.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
                                         <h5 class="card-title">Empréstimos</h5>
@@ -70,13 +70,13 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="card-item col-4">
+                            <div class="card-item col-lg-4 col-md-12 col-sm-12">
                                 <div class="card" style="width: 18rem;">
-                                    <img src="./img/card-1.png" class="card-img-top" alt="...">
+                                    <img src="/img/img-welcome/card-1.png" class="card-img-top" alt="...">
                                     <div class="card-body">
 
-                                        <h5 class="card-title">Comunidade de Leitores</h5>
-                                        <p class="card-text">Um espaço para discussão temática</p>
+                                        <h5 class="card-title">Mural da Leitura</h5>
+                                        <p class="card-text">As principais atividades da Biblioteca em um só lugar.</p>
                                         <a href="#" class="btn btn-primary">Saiba mais</a>
                                     </div>
                                 </div>
